--- a/package.json
+++ b/package.json
@@ -6,19 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "buffer": "^6.0.3",
+    "solid-js": "^1.8.20"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.9.0",
-    "globals": "^15.9.0",
     "vite": "^5.4.1",
-    "vite-plugin-environment": "^1.1.3"
+    "vite-plugin-environment": "^1.1.3",
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "vite-plugin-solid": "^2.10.2"
   }
 }
