--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "solid-js": "^1.8.20"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.14",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.4.1",
     "vite-plugin-environment": "^1.1.3",
     "vite-plugin-node-polyfills": "^0.22.0",
