--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solidjs/router": "^0.14.3",
     "buffer": "^6.0.3",
     "solid-js": "^1.8.20"
   },
