--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "onlytax-dapp",
+  "name": "my-vue-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@solidjs/router": "^0.14.3",
-    "buffer": "^6.0.3",
-    "solid-js": "^1.8.20"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.14",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.10",
+    "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1",
     "vite-plugin-environment": "^1.1.3",
-    "vite-plugin-node-polyfills": "^0.22.0",
-    "vite-plugin-solid": "^2.10.2"
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
