--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build:css": "npx tailwindcss -i ./src/index.css -o style/output.css"
   },
   "dependencies": {
+    "@apocentre/solana-web3": "Apocentre/solana-web3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.14",
