--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apocentre/solana-web3": "Apocentre/solana-web3",
+    "@solana/wallet-adapter-react": "^0.15.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "socket.io-client": "^4.7.5"
