--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 VITE_WS=ws://localhost:8090
 VITE_API=http://localhost:4000
 VITE_RPC=https://api.devnet.solana.com
+VITE_PRIORITY_FEE_RPC=https://intensive-alien-wish.solana-mainnet.quiknode.pro/77ca2cba4139e49efe0c0a891d16b2cfa31735bc
