feat: load priority fees from the API

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
 VITE_WS=ws://localhost:8090
 VITE_API=http://localhost:4000
-VITE_RPC=https://devnet.helius-rpc.com/?api-key=ce29d016-53da-4f0d-8e11-1a586544555d
-VITE_PRIORITY_FEE_RPC=https://intensive-alien-wish.solana-mainnet.quiknode.pro/77ca2cba4139e49efe0c0a891d16b2cfa31735bc
+VITE_RPC=https://pepi-ka8kjm-fast-devnet.helius-rpc.com
