--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "decimal.js": "^10.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-tiny-toast": "^2.1.1",
     "rxjs": "^7.8.1",
     "socket.io-client": "^4.7.5"
   },
