chore: update production envs

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_WS=ws://localhost:8090
-VITE_API=http://localhost:4000
-VITE_RPC=https://pepi-ka8kjm-fast-devnet.helius-rpc.com
+VITE_WS=ws://ws.onlytax.ios
+VITE_API=https://api.onlytax.io
+VITE_RPC=https://kellie-rda4qn-fast-mainnet.helius-rpc.com
