chore: remove default otken address

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_WS=wss://ws.onlytax.ios
+VITE_WS=wss://ws.onlytax.io
 VITE_API=https://api.onlytax.io
 VITE_RPC=https://kellie-rda4qn-fast-mainnet.helius-rpc.com
